# llm-chess

./: README.md  game.pgn  pyproject.toml
src/llm_chess/: __main__.py
